--- a/radek556.pl/mplayer/bio/index.html
+++ b/radek556.pl/mplayer/bio/index.html
@@ -14,7 +14,7 @@ okokok</h1>
 <h5>
 Programmer - Voice Actor</h5>
 <p>
-Radek / Michał from city Gdańsk, you will not know the order of these names, 22 yo programmer and voice actor of sum Games / Videos etc. Kinda new in Voice Actor profession but getting better and better, trying sum fundubs and other things to improve skills.</p>
+Radek / Michał from city Gdańsk, you will not know the order of these names, 22 yo programmer and voice actor of sum Games / Videos etc. Kinda new in Voice Actor profession but getting better and better, trying sum fandubs and other things to improve skills.</p>
 <ul>
 <li><a href="https://www.youtube.com/@radek5569"><i class="fa fa-youtube-square" aria-hidden="true"></i></a></li>
 </ul>
