--- a/radek556.pl/mplayer/bio/index.html
+++ b/radek556.pl/mplayer/bio/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <div id="terminal">
-      <a id="before" href="resuil.github.html"></a>
+      <a id="before" href="index.html"></a>
     </div>
     <div id="command" onclick="$('texter').focus();">
       <textarea type="text" id="texter" onkeyup="typeIt(this, event)" onkeydown="typeIt(this, event); moveIt(this.value.length, event)" onkeypress="typeIt(this, event);"></textarea>
